# OwnText

./: CMakeLists.txt  Makefile  README.md  Texts.h  main.c  owntext.c  owntext.h  prog.c  prog.h  termCurses.c  termcurses  termio.c  termio.h
src/: args.c  args.h  buf.c  buf.h  config.h  logging.c  logging.h  owntext.c  termio.c  termio.h  vemacs.c  window.c  window.h
src/util/: logging.c  logging.h
test/: test-termio.c  test_buf.c  test_log.c
